--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,15 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion(BuildConfigVersions.compileSdk)
+    buildToolsVersion(BuildConfigVersions.buildToolsVersion)
 
     defaultConfig {
         applicationId "com.app.imkbapp"
-        minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion(BuildConfigVersions.minSdk)
+        targetSdkVersion(BuildConfigVersions.targetSdk)
+        versionCode = BuildConfigVersions.versionCode
+        versionName = BuildConfigVersions.versionName
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,42 +41,46 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation(Libs.kotlin)
+    implementation(Libs.coreKtx)
+    implementation(Libs.appcompat)
+    implementation(Libs.material)
+    implementation(Libs.constraintLayout)
+    testImplementation(Libs.junit)
+    androidTestImplementation(Libs.junitExt)
+    androidTestImplementation(Libs.espresso)
 
-    //retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.7.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.4.0"
+    //Navigation
+    implementation(Libs.navigationFragment)
+    implementation(Libs.navigationUi)
+    implementation(Libs.navigationFragmentKtx)
+    implementation(Libs.navigationUiKtx)
 
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    //Retrofit
+    implementation(Libs.retrofit)
+    implementation(Libs.retrofitConverter)
+    implementation(Libs.interceptor)
+
+    //Recyclerview
+    implementation(Libs.recyclerview)
+
     //Chart for graoh
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation(Libs.mpChart)
+
     //coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    //lifecycle
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    // viewmodel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    // Livedata
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation(Libs.coroutinesCore)
+    implementation(Libs.coroutines)
+
+    //Lifecycle
+    implementation(Libs.lifecycleExtensionArch)
+    implementation(Libs.lifecycleExtension)
+    implementation(Libs.lifecycleViewmodelKtx)
+    implementation(Libs.lifecycleLivedata)
 
     //hilt
-    implementation "com.google.dagger:hilt-android:2.35"
-    kapt "com.google.dagger:hilt-compiler:2.35"
-    implementation "androidx.activity:activity-ktx:1.2.0-beta01"
+    implementation(Libs.hilt)
+    kapt(Libs.hiltCompiler)
+    implementation(Libs.activityKtx)
 
 
 }
